plugins {
    id "base"
    id "idea"
    id "com.gorylenko.gradle-git-properties"
}

version = "0.0.1-SNAPSHOT"
description = ""

assert System.properties["java.specification.version"] == "17" || "18" || "19" || "20" || "21" || "22"

allprojects {
    group = 'io.flexwork'
    repositories {
        mavenCentral()
    }

    subprojects {
        afterEvaluate {
            if (it.plugins.hasPlugin('java') || it.plugins.hasPlugin('java-library')) {
                java {
                    sourceCompatibility=17
                    targetCompatibility=17
                }
            }
        }
    }

    gitProperties {
        failOnNoGitDirectory = false
        keys = ["git.branch", "git.commit.id.abbrev", "git.commit.id.describe"]
    }

    tasks.withType(com.gorylenko.GenerateGitPropertiesTask).configureEach {
        outputs.doNotCacheIf("Task is always executed") { true }
    }
}